--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@oclif/plugin-plugins": "^3.9.4",
     "@royli/hygen": "^6.2.0",
     "@surgio/eslint-config-surgio": "^1.0.6",
+    "@surgio/gateway": "^2.2.0",
     "@surgio/logger": "^1.3.0",
     "@types/eslint": "^8.56.5",
     "agentkeepalive": "^4.5.0",
